--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -148,3 +148,9 @@ table#report_list .report_title {
 table#report_list .report_action {
     width: 13%;
 }
+re {
+    font-family: "Hiragino Kaku Gothic Pro",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
+}
+h3 {
+    font-size: larger;
+}
